Øvelser med HTML og CSS

--- a/src/HtmlPlusCss/exercise.html
+++ b/src/HtmlPlusCss/exercise.html
@@ -12,6 +12,12 @@
         <button>See pricing</button>
     </section>
 
+    <div class="asshole-container">
+        <div class="asshole asshole1">asshole 1</div>
+        <div class="asshole asshole2">asshole 2</div>
+        <div class="asshole asshole3">asshole 3</div>
+    </div>
+
     <div class="flex-container">
         <div class="flex-item">Flex item 1</div>
         <div class="flex-item">Flex item 2</div>
